# Cpp_Certification_Course

./: Homework.sln
C1A1E1/: C1A1E1.vcxproj  C1A1E1_main.cpp
Course1_INFO/: C1A1E0_Quiz.txt  UCSD_Student_ID.txt
Exercise/: C1A1E0_Quiz.txt  C1A1E1_main.cpp  C1A1E2_main.c  C1A2E0_Quiz.txt  C1A2E1_main.cpp  C1A2E2_main.c  C1A2E3_main.cpp  C1A3E1_main.c  C1A3E2_main.cpp  C1A3E3_main.cpp  C1A4E0_Quiz.txt  C1A4E1.h  C1A4E1_ComputeMaximum.c  C1A4E1_ComputeMinimum.c  C1A4E1_Functions.h  C1A4E1_main.c  C1A4E2.hpp  C1A4E2_PrintLines-0.cpp  C1A4E2_PrintLines-1.cpp  C1A4E2_PrintLines-3.cpp  C1A4E2_main.cpp  C1A4E3_main.cpp  C1A4E4_MaxOf.h  C1A4E4_main.cpp  C1N1PE6_main.cpp  Exercise.vcxproj
Exercise/C1A1/: C1N1PE6_main.cpp
Exercise/C1A3/: C1A3E3_main.cpp
Exercise/C1A4/: C1A4E1_ComputeMaximum.c  C1A4E1_ComputeMinimum.c  C1A4E1_main.c  C1A4E2_PrintLines-1.cpp  C1A4E2_PrintLines-2.cpp  C1A4E2_PrintLines-3.cpp  C1A4E2_main.cpp  C1A4E3_PrintLines.cpp  C1A4E3_main.cpp
Exercise/C1A5/: C1A5E0_Quiz.txt  C1A5E1_main.c  C1A5E2_ComputeMaximum.cpp  C1A5E2_ComputeMinimum.cpp  C1A5E2_main.cpp  C1A5E3_ComputeMaximum.cpp  C1A5E3_ComputeMinimum.cpp  C1A5E3_main.cpp
Exercise/C1A6/: C1A6E1_MyStrlen.c  C1A6E1_main.c  C1A6E2_MyStrcmp.c  C1A6E2_main.c  C1A6E3_GetSubstring.c  C1A6E3_main.c
Exercise/C1A7/: C1A7E0_Quiz.txt  C1A7E1_DetermineElapsedTime.cpp  C1A7E1_MyTime.h  C1A7E1_main.cpp  C1A7E2_main.c
Exercise/C1A8/: C1A8E1_SavingsAccount.cpp  C1A8E1_SavingsAccount.h  C1A8E1_main.cpp  C1A8E2_main.c
Exercise/C2A1/: C2A1E0_Quiz.txt  TEMP.txt  (+14 more)
Exercise/CA4/UnitTest++/src/: CMakeLists.txt
(+300 files in other folders)
